--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <ul>
       <li>2 slices of bread
           <ul>
-              <li>1 tbsp of butter</li>
+              <li>cheddargig</li>
               <li>mozzarella</li>
               <li>pepper jack</li>
           </ul>
